@@ -1,2 +1,13 @@
 # operaciones_con_properties_navegador_web
 Apllicación de escritorio Java con Navegador web JavaFX para las operaciones con archivos de internacionalización con archivos properties
+
+Depende de:
+- Modelos: https://github.com/EAG-es/modelos
+- Modelos_html: https://github.com/EAG-es/modelos_html
+- Navegador_web: https://github.com/EAG-es/navegador_web
+- Configurar_javaFX: https://github.com/EAG-es/configurar_javafx
+
+Instalación:
+- Tener Java JDK 17+ instalado en el ordenador de ejecución.
+- Ejecutar la primera vez (en la carpeta de instalación): java -jar configurar_javafx-1.17.0.8.jar 
+- Ejecutar(en la carpeta de instalación): java --module-path .:re/linux: --add-modules javafx.controls,javafx.fxml,javafx.web,javafx.media,javafx.graphics,javafx.base,javafx.swing -jar operaciones_con_properties_navegador_web-1.0.jar
